--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" type="text/css" href="css/styles.production.css">
     </head>
     <body>
-        <h1>MATTHEW PROTEAU</h1>
+        <h1>//MATTHEW PROTEAU</h1>
         <header class="page-header">
             <img src="./img/doof.jpg" alt="logo" width="100px" class="page-header_item">
             <nav class="main-navigation page-header_item">
