--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Matthew Proteau 
+            //Matthew Proteau 
         </title>
         <link rel="shorcut icon" href="./img/favicon-32x32.png"/>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
