--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>About</title>
 </head>
 <body>
-        <h1>MATTHEW PROTEAU</h1>
+        <h1>//MATTHEW PROTEAU</h1>
         <header class="page-header">
             <img src="./img/doof.jpg" alt="logo" width="100px" class="page-header_item">
             <nav class="main-navigation page-header_item">
@@ -42,7 +42,7 @@
           <li>Dancing</li>
         </ul>
 
-        <a href="files/resume.pdf" class="button" style="color: black;" download>Resume</a>
+        <a href="files/resume.pdf" class="button" style="color: var(--text-color)" download>Resume</a>
     
     </main>
     <footer>
