--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
     <title>Contact</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>MATTHEW PROTEAU</h1>
+        <h1>//MATTHEW PROTEAU</h1>
         <header class="page-header">
             <img src="./img/doof.jpg" alt="logo" width="100px" class="page-header_item">
             <nav class="main-navigation page-header_item">
