--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/styles.production.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <h1>//MATTHEW PROTEAU</h1>
-        <header class="page-header">
-            <img src="./img/doof.jpg" alt="logo" width="100px" class="page-header_item">
+        <header class="main-header">
+            <img src="./img/snake.png" alt="logo" width="70px" class="img1">
+            <h1>//MATTHEW PROTEAU</h1>
             <nav class="main-navigation page-header_item">
                     <ul role="menubar" class="navigation-list">
                         <li role="presentation">
@@ -38,7 +38,7 @@
         </header>
         <main>
             <div class="profile">
-                <div >
+                <div class="img2" >
                     <img src="./img/profile_pic.png" class="profile_portrait" alt="profile picture">
                 </div>
                 <p class="profile-header">
