--- a/contact.html
+++ b/contact.html
@@ -12,27 +12,28 @@
     <header>
         <h1>//MATTHEW PROTEAU</h1>
         <header class="page-header">
-            <img src="./img/doof.jpg" alt="logo" width="100px" class="page-header_item">
+            <img src="./img/snake.png" alt="logo" width="100px" class="page-header_item">
             <nav class="main-navigation page-header_item">
-                    <ul role="menubar" class="navigation-list">
-                        <li role="presentation">
-                            <a href="index.html" role="menu-item" class="navigation-list_item navigation-list_item--active">
-                                <button type="button" role="menu-item" class="navigation-list_item">Home</button>
-                            </a>
-                        </li>
-                        <li role="presentation">
-                            <a href="about.html" role="menu-item" class="navigation-list_item">
-                                <button type="button" class="navigation-list_item">About</button>
-                            </a>
-                        </li>
-                        <li role="presentation">
-                            <a href="contact.html" role="menu-item" class="navigation-list_item">
-                                <button type="button" class="navigation-list_item">Contact</button>
-                            </a>
-                        </li>
-                    </ul>
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation">
+                        <a href="index.html" class="navigation-list_item navigation-list_item--active button" >
+                            Home
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" class="navigation-list_item button">
+                            About
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="contact.html" class="navigation-list_item button " >
+                            Contact
+                        </a>
+                    </li>
+                </ul>
             </nav>
         </header>
+    </header>
     <main>
         <h1>Contact</h1>
         <address class="address">
@@ -46,10 +47,10 @@
             Email:<a href="mailto:matthew.proteau@gmail.com">matthew.proteau@gmail.com</a><br>
             <br>
         </address>
-        <a href="mailto:matthew.proteau@gmail.com">Email Me Business Inquires & Collaboration</a>
+        <a href="mailto:matthew.proteau@gmail.com">Email Me Collaboration Inquires</a>
         <form id="contact-form" class="contact-form" method="post">
             <label class="standard-label" for="contact-email">*E-mail: </label>
-            <input type="email" id='contact-email' required>
+            <input type="email" id="contact-email" required>
           
             <label class="standard-label" for="contact-telephone">*Telephone: </label>
             <input type="tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}" id="contact-telephone" required>
