--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
     <head>
         <meta charset="utf-8">
         <title>
             //Matthew Proteau 
         </title>
-        <link rel="shorcut icon" href="./img/favicon-32x32.png"/>
+        <link rel="shorcut icon" href="./img/favicon-32x32.png">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,23 +15,23 @@
     </head>
     <body>
         <header class="main-header">
-            <img src="./img/snake.png" alt="logo" width="70px" class="img1">
+            <img src="./img/snake.png" alt="logo" width="70p" class="img1">
             <h1>//MATTHEW PROTEAU</h1>
             <nav class="main-navigation page-header_item">
                     <ul role="menubar" class="navigation-list">
                         <li role="presentation">
-                            <a href="index.html" role="menu-item" class="navigation-list_item navigation-list_item--active">
-                                <button type="button" role="menu-item" class="navigation-list_item">Home</button>
+                            <a href="index.html" class="navigation-list_item navigation-list_item--active button" >
+                                Home
                             </a>
                         </li>
                         <li role="presentation">
-                            <a href="about.html" role="menu-item" class="navigation-list_item">
-                                <button type="button" class="navigation-list_item">About</button>
+                            <a href="about.html" class="navigation-list_item button">
+                                About
                             </a>
                         </li>
                         <li role="presentation">
-                            <a href="contact.html" role="menu-item" class="navigation-list_item">
-                                <button type="button" class="navigation-list_item">Contact</button>
+                            <a href="contact.html" class="navigation-list_item button " >
+                                Contact
                             </a>
                         </li>
                     </ul>
