--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <html>
     <head>
         <meta charset="utf-8">
@@ -14,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
+
         <header class="main-header">
             <img src="./img/snake.png" alt="logo" width="70p" class="img1">
             <h1>//MATTHEW PROTEAU</h1>
@@ -43,7 +43,7 @@
                     <img src="./img/profile_pic.png" class="profile_portrait" alt="profile picture">
                 </div>
                 <p class="profile-header">
-                    CHECK ME OUT
+                    WEBSITE PORTFOLIO
                 </p>
                 <p>
                     Web Developer, 3D Artist, and Graphic Designer
