--- a/about.html
+++ b/about.html
@@ -9,10 +9,11 @@
     <title>About</title>
 </head>
 <body>
+
+    <header class="main-header">
+        <img src="./img/snake.png" alt="logo" width="70p" class="img1">
         <h1>//MATTHEW PROTEAU</h1>
-        <header class="page-header">
-            <img src="./img/snake.png" alt="logo" width="100px" class="page-header_item">
-            <nav class="main-navigation page-header_item">
+        <nav class="main-navigation page-header_item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
                         <a href="index.html" class="navigation-list_item navigation-list_item--active button" >
@@ -30,8 +31,8 @@
                         </a>
                     </li>
                 </ul>
-            </nav>
-        </header>
+        </nav>
+    </header>
     <main>
         <h1>About</h1>
             <p>Developing skills, always learning, never stopping</p>
