--- a/work.html
+++ b/work.html
@@ -11,32 +11,33 @@
  
 </head>
 <body>
-    <h1>//MATTHEW PROTEAU</h1>
-    <header class="page-header">
-        <img src="./img/snake.png" alt="logo" width="100px" class="page-header_item">
+
+    <header class="main-header">
+        <img src="./img/snake.png" alt="logo" width="70p" class="img1">
+        <h1>//MATTHEW PROTEAU</h1>
         <nav class="main-navigation page-header_item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="index.html" class="navigation-list_item navigation-list_item--active button" >
-                        Home
-                    </a>
-                </li>
-                <li role="presentation">
-                    <a href="about.html" class="navigation-list_item button">
-                        About
-                    </a>
-                </li>
-                <li role="presentation">
-                    <a href="contact.html" class="navigation-list_item button " >
-                        Contact
-                    </a>
-                </li>
-            </ul>
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation">
+                        <a href="index.html" class="navigation-list_item navigation-list_item--active button" >
+                            Home
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" class="navigation-list_item button">
+                            About
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="contact.html" class="navigation-list_item button " >
+                            Contact
+                        </a>
+                    </li>
+                </ul>
         </nav>
     </header>
     
     <section>
-        <h1>Work</h1>
+        <h1 id="h1_work">Work</h1>
         <div class="grid">
             <div class="grid_item">
                 <h2>Web Application</h2>
@@ -48,7 +49,7 @@
              <div class="grid_item">
                 <h2>3D Application</h2>
                 <p>
-                   Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                   Using React-Three, I have created a website to display some of my major 3D projects
                 </p>
                 <a href="#">See project on GitHub</a>
              </div>
