--- a/index.html
+++ b/index.html
@@ -15,33 +15,14 @@
     <body>
 
         <header class="main-header">
-            <img src="./img/snake.png" alt="logo" width="70p" class="img1">
+            <img src="./img/snake.png" alt="logo" width="100p" class="img1">
             <h1>//MATTHEW PROTEAU</h1>
-            <nav class="main-navigation page-header_item">
-                    <ul role="menubar" class="navigation-list">
-                        <li role="presentation">
-                            <a href="index.html" class="navigation-list_item navigation-list_item--active button" >
-                                Home
-                            </a>
-                        </li>
-                        <li role="presentation">
-                            <a href="about.html" class="navigation-list_item button">
-                                About
-                            </a>
-                        </li>
-                        <li role="presentation">
-                            <a href="contact.html" class="navigation-list_item button " >
-                                Contact
-                            </a>
-                        </li>
-                    </ul>
-            </nav>
         </header>
         <main>
             <div class="profile">
-                <div class="img2" >
+                <!-- <div class="img2" >
                     <img src="./img/profile_pic.png" class="profile_portrait" alt="profile picture">
-                </div>
+                </div> -->
                 <p class="profile-header">
                     WEBSITE PORTFOLIO
                 </p>
@@ -58,12 +39,31 @@
             </div>
         </main>
         <footer class="page-footer">
-            <div>
-                <p>Find Me On</p>
-                <a href="https://github.com/Mattprotz" target="_blank"><img src="img/github_icon.svg" alt="Github logo"></a>
-                <a href="https://www.artstation.com/rico_suave" target="_blank"><img src="img/artstation_icon.svg" alt="ArtStation logo"></a>
-                <a href="https://www.linkedin.com/in/matthew-proteau-43a146178/" target="_blank"><img src="img/linkedin_icon.svg" alt="LinkedIn logo"></a>
-            </div>
+            <nav class="main-navigation page-header_item">
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation">
+                        <a href="index.html" class="navigation-list_item navigation-list_item--active button" >
+                            Home
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" class="navigation-list_item button">
+                            About
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a href="contact.html" class="navigation-list_item button " >
+                            Contact
+                        </a>
+                    </li>
+                </ul>
+        </nav>
+        <div class="links">
+            <p>Find Me On</p>
+            <a href="https://github.com/Mattprotz" target="_blank"><img src="img/github_icon.svg" alt="Github logo"></a>
+            <a href="https://www.artstation.com/rico_suave" target="_blank"><img src="img/artstation_icon.svg" alt="ArtStation logo"></a>
+            <a href="https://www.linkedin.com/in/matthew-proteau-43a146178/" target="_blank"><img src="img/linkedin_icon.svg" alt="LinkedIn logo"></a>
+        </div>
         </footer>
     </body>
 </html>
